--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/ace-cooper/poc-consistent-hashing#readme",
   "devDependencies": {
     "@types/node": "^18.16.3",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
 }
