--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
     "@types/node": "^18.16.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "redis": "^4.6.6"
   }
 }
