--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "",
   "main": "./dist/index.js",
   "scripts": {
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "migrate-gen": "npx prisma migrate dev --name '_mg' --create-only",
+    "migrate-run": "npx prisma migrate deploy",
+    "db-pull": "npx prisma db pull",
+    "db-show": "npx prisma studio",
+    "db-map": "npx prisma generate"
   },
   "repository": {
     "type": "git",
@@ -24,8 +29,10 @@
   },
   "dependencies": {
     "@prisma/client": "^4.14.0",
+    "@types/express": "^4.17.17",
     "cls-hooked": "^4.2.2",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "redis": "^4.6.6",
     "ulid": "^2.3.0"
   }
